examples/test/testpolicy3043.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3043
  namespace: namespace305
spec:
  podSelector:
    matchLabels:
      key29: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value8
          key43: value49
          key44: value9
      podSelector:
        matchLabels:
          key23: value4
